@@ -1,0 +1,46 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta content="text/html; charset=iso-8859-1"
+ http-equiv="Content-Type">
+  <title>Qtstalker - Stocks Plugin</title>
+  <meta content="amaya 6.1, see http://www.w3.org/Amaya/"
+ name="generator">
+</head>
+<body lang="en" xml:lang="en">
+<h2><u>Stocks Plugin<br>
+</u></h2>
+<h3>Description:</h3>
+<p>This plugin is used for managing stock data. User can edit bar data
+fields. There are 2 tabs in the stock dialog. The details tab allows
+the user to edit some fundamental data. The data tab allows the user to
+edit bar data.<br>
+</p>
+<h3>Details Tab:</h3>
+<ul>
+  <li>Symbol - This is the 'ticker' name. Uneditable.<br>
+  </li>
+  <li>Name - This is the name of the company. Editable.</li>
+  <li>Type - This is the type of security. ie stock, futures etc.
+Uneditable.<br>
+  </li>
+</ul>
+<br>
+<p><img style="width: 310px; height: 391px;" alt=""
+ src="workwithcharts2.png">&nbsp;<br>
+</p>
+<p><br>
+</p>
+<h3>Data Tab:</h3>
+<p>Here is where you can edit the bar data. Just select a date and
+time and press the 'search' button and the
+data will display in the list. To edit a field, just select a field and
+change the values directly. To save your changes
+press the save button. To delete a record press the delete button.</p>
+<p><img style="width: 310px; height: 391px;" alt=""
+ src="workwithcharts3.png">&nbsp;<br>
+</p>
+<br>
+<br>
+</body>
+</html>
