@@ -174,6 +174,9 @@
 
 20040920: Added help dialogs to all the plugins. 
 
+20040920: Added -ffast-math compiler option to all *.pro files. There is a noticable improvement
+          in speed. Very cool.
+	  
 
 	  	  	  
 0.26
